--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,10 +95,11 @@ android:orientation="vertical"
     <!--</ScrollView>-->
 
     <com.mb.holochartstest.BarGraph
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/graph"
-    android:layout_marginBottom="20dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/graph"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="20dp"/>
 
 
 </LinearLayout>
