--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,12 +94,16 @@ android:orientation="vertical"
 
     <!--</ScrollView>-->
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.mb.holochartstest.BarGraph
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/graph"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"/>
+    </LinearLayout>
 
 
 </LinearLayout>
